# Python-notebook-tools

./: Makefile  README.md  pynbtools.opam
docker/: python.yml
evaluation/: evaluation.py  good.py  notation.py
nb2py/: dune  nb2py.ml
py2nb/: dune  py2nb.ml
server/: db.ml  dune  options.ml  pages.ml  pynbeval.ml  util.ml
tests/: #tic_tac_toe.py#  .#tic_tac_toe.py  good.py  polynome2.tpy  tic_tac_toe.ipynb  tic_tac_toe.tpy  tic_tac_toe_corrige.ipynb
tests/.ipynb_checkpoints/: tic_tac_toe-checkpoint.ipynb
tests/to_test/: eleve1.py  eleve2.py
