opam-version: "2.0"
synopsis: "Server and tools for automatic notation of python notebooks"

maintainer: "Christophe Raffalli <christophe@raffalli.eu>"
authors: [
  "Christophe Raffalli <christophe@raffalli.eu>" ]
license: "MIT"
bug-reports: "christophe@raffalli.eu"

depends: [
  "ocaml" { >= "4.04.0" }
  "dune"  { build & >= "1.2.0" }
  "str" "ppx_rapper" "ppx_rapper_lwt" "tiny_httpd" "tyxml" "caqti"
]

build: [ [ "dune" "build" "-p" name "-j" jobs ] ]
run-test: [ [ "dune" "runtest" "-p" name "-j" jobs ] ]
